@@ -1,5 +1,5 @@
 // -*- MPC -*-
-// $Id $
+// $Id$
 
 project(*idl): taoidldefaults, ami {
   IDL_Files {
