@@ -1,7 +1,6 @@
-
 //=============================================================================
 /**
- *  @file    server.cpp
+ *  @file    main.cpp
  *
  *  $Id$
  *
