@@ -1,3 +1,12 @@
+Mon Nov 14 09:22:08 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/Mixed_Sync_ASync_Events/MixedSyncASyncEvents.mpc:
+        * tests/Mixed_Sync_ASync_Events/main.cpp:
+        * tests/Mixed_Sync_ASync_Events/test.idl:
+        * tests/Mixed_Sync_ASync_Events/test_i.cpp:
+
+          Fuzz fixes.
+
 Mon Nov 14 06:39:28 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.cpp:
